force-app/main/default/objects/Proposal_Eligibility_Check_List__c/Proposal_Eligibility_Check_List__c.object-meta.xml
<CustomObject>
    <label>Proposal Eligibility Check List</label>
    <nameField>
        <displayFormat>PECL-{00000}</displayFormat>
        <label>Proposal Eligibility Check List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Eligibility Check List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>