force-app/main/default/objects/Proposal_Eligibility_Check_List__c/fields/Display_Question__c.field-meta.xml
<CustomField>
    <fullName>Display_Question__c</fullName>
    <label>Display Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>