force-app/main/default/objects/Proposal_Eligibility_Check_List__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipLabel>Proposal Eligibility Check List</relationshipLabel>
    <relationshipName>Proposal_Eligibility_Check_List</relationshipName>
    <type>Lookup</type>
</CustomField>