force-app/main/default/objects/Proposal_Eligibility_Check_List__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Boolean: True/False
Text: 255 Chars
Long Text: 30k Chars</description>
    <inlineHelpText>Boolean: True/False
Text: 255 Chars
Long Text: 30k Chars</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>Long Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>